--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      /* latin */
+      @font-face {
+        font-family: "Love Ya Like A Sister";
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url(%PUBLIC_URL%/LoveYaLikeASister.woff2) format("woff2");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+          U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
+          U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
